--- a/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.html
+++ b/src/app/evolucion-ambulatoria/evolucion-ambulatoria.component.html
@@ -144,7 +144,7 @@
 
             <div class="row">
             <label>Busque el diagnostico:</label>
-            <input class="campoLargo" max-num-list= 5 name="myData" auto-complete [(ngModel)]="myData" [source]="fuente" placeholder="Ingrese caracteres para iniciar la busqueda de diagnostico"/>
+            <input class="campoLargo" max-num-list= 5 name="diagn_problema_salud" auto-complete [(ngModel)]="evolucionAmbulatoria.diagn_problema_salud" [source]="fuente" placeholder="Ingrese caracteres para iniciar la busqueda de diagnostico"/>
             </div>
 
             <div class="row">
