--- a/src/app/tabs/tabs.component.html
+++ b/src/app/tabs/tabs.component.html
@@ -6,7 +6,7 @@
     <ul class="nav nav-pills">
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="evolucionAmbulatoria" routerLinkActive="active">Evoluci&oacute;n Ambulatoria</a></li>        -->
       <!-- <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="consulta" routerLinkActive="active">Consulta</a></li> -->
-      <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/buscar" routerLinkActive="active">Buscar</a></li>
+      <li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/buscar" routerLinkActive="active">Historia Clinica</a></li>
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="antecedentes" routerLinkActive="active">Antecedente</a></li>-->
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="antecedentes_perinatologicos" routerLinkActive="active">Antecedentes perinatologicos</a></li>-->
       <!--<li role="presentation" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}"><a routerLink="#" routerLinkActive="active">Listado de problemas de salud</a></li>-->
