--- a/src/app/antecedentes_familiares/antecedentes-familiares.component.scss
+++ b/src/app/antecedentes_familiares/antecedentes-familiares.component.scss
@@ -5,3 +5,20 @@
     margin-top: 5px;
     margin-bottom: 5px;
 }
+/*Compatibilidad para navegadores*/
+
+::-webkit-input-placeholder {
+    text-align: center;
+  }
+  
+  :-moz-placeholder { /* Firefox 18- */
+    text-align: center;  
+  }
+  
+  ::-moz-placeholder {  /* Firefox 19+ */
+    text-align: center;  
+  }
+  
+  :-ms-input-placeholder {  
+    text-align: center; 
+  }
