--- a/src/app/buscar-paciente/buscar-paciente.component.html
+++ b/src/app/buscar-paciente/buscar-paciente.component.html
@@ -1,16 +1,29 @@
 <form #f="ngForm">
+        <div class="jumbotron" align="center">
+            <div class="container">
+                <h4><label>B&uacute;squeda de pacientes:</label></h4>
+                <br>
+                <input class="campoMediano" name="busquedaPersona" type="search" ngModel required #busqueda="ngModel" placeholder="Ingrese el n&uacute;mero de documento">
+                <br>
+                <button [disabled]="activarBoton()" id="botonBuscar" (click)="buscar(f)">Buscar</button>
+            </div>
+        </div>
+  
+
+    <!--
     <h5>B&uacute;squeda de personas:</h5>
     <input name="busquedaPersona" type="search" ngModel required #busqueda="ngModel">
     <button [disabled]="activarBoton()" id="botonBuscar" (click)="buscar(f)">Buscar</button>
+    -->
 </form>
-<div *ngIf="buscandoPaciente()"> 
-    <div class="alert alert-info">
+<div *ngIf="buscandoPaciente()">
+    <div class="alert alert-info" align="center">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         <strong>Buscando...!</strong> buscando paciente y consultas realizadas ....
     </div>
 </div>
 <div *ngIf="pacienteNoEncontrado()">
-    <div class="alert alert-warning">
+    <div class="alert alert-warning" align="center">
         <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
         <strong>Paciente no encontrado</strong> Vuelva a introducir un n&uacute;mero de documento v&aacute;lido...
     </div>
@@ -74,11 +87,11 @@
     </div>
     <hr>
     <div class="row" align="center">
-            <a routerLink="/evolucionAmbulatoria" routerLinkActive="active"><button type="button" class="btn btn-primary">Nueva Atenci&oacute;n</button></a>
+        <a routerLink="/evolucionAmbulatoria" routerLinkActive="active"><button type="button" class="btn btn-primary">Nueva Atenci&oacute;n</button></a>
         <button type="button" class="btn btn-primary" routerLink="/antecedentes_perinatologicos" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Antecedentes perinatol&oacute;gicos</button>
         <button type="button" class="btn btn-primary" routerLink="/antecedentes" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Antecedentes familiares y personales</button>
-        <button type="button" class="btn btn-primary" routerLink="#" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Lista de problemas de salud</button>
-        <button (click)="salir()" type="button" class="btn btn-primary" routerLink="/salir" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Terminar</button>
+        <button type="button" class="btn btn-primary" routerLink="/listado" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Lista de problemas de salud</button>
+        <button (click)="salir()" type="button" class="btn btn-danger" routerLink="/salir" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Terminar</button>
     </div>
     <br>
     <hr>
