--- a/src/app/consulta/consulta.component.html
+++ b/src/app/consulta/consulta.component.html
@@ -7,14 +7,18 @@
       <div class="row" align="center">
         <div *ngIf="getCantidadAtenciones()>0">
           <table class="table table-striped table-bordered table-hover" id="tablaAtencion">
-            <th>Codigo</th>
-            <th>Fecha Atenci&oacute;n <input #ordenamiento type="checkbox" [(ngModel)]="ordenarASC" (change)="ordenar()">{{orden}}</th>
+            <th>Anulado?</th>
+            <th>Codigo    {{mensajeHabilitarAnuladas}}<input #mostrarAnulados type="checkbox" [(ngModel)]="habilitarAnulados" (change)="habilitarAnuladas()"></th>
+            <th>Fecha Atenci&oacute;n   {{orden}}<input #ordenamiento type="checkbox" [(ngModel)]="ordenarASC" (change)="ordenar()"></th>
             <th>Observaci&oacute;n</th>
+            <th *ngIf="habilitarAnulados">Observacion de anulaciones</th>
             <th>Acciones</th>
             <tr *ngFor="let atencion of atenciones">
+              <td>{{atencion.anulada | booleanFilterPipe: 'atencion.anulada' }}
               <td>{{atencion.codigo}}</td>
               <td>{{atencion.fecha_atencion | date:'d MMM y jms'}}</td>
               <td>{{atencion.observacion}}</td>
+              <td *ngIf="habilitarAnulados">{{atencion.observacion_anulacion}} </td>
               <td>
                 <button type type="button" class="btn btn-primary" (click)="ngxSmartModalService.getModal('atencionModal').open(); ngxSmartModalService.setModalData(atencion, 'atencionModal');">Agregar observacion</button>
                 <button type="button" class="btn btn-primary" (click)="ngxSmartModalService.getModal('verAtencionModal').open(); agregarDatosEvolucionAmbulatoria(atencion)">Ver</button>
