--- a/src/app/encabezado/encabezado.component.scss
+++ b/src/app/encabezado/encabezado.component.scss
@@ -106,3 +106,21 @@
   color: white;
   font-size: 16px;
 }
+
+/*Compatibilidad para navegadores*/
+
+::-webkit-input-placeholder {
+  text-align: center;
+}
+
+:-moz-placeholder { /* Firefox 18- */
+  text-align: center;  
+}
+
+::-moz-placeholder {  /* Firefox 19+ */
+  text-align: center;  
+}
+
+:-ms-input-placeholder {  
+  text-align: center; 
+}
