--- a/src/app/formulario-antecedentes-familiares/formulario-antecedentes-familiares.component.scss
+++ b/src/app/formulario-antecedentes-familiares/formulario-antecedentes-familiares.component.scss
@@ -1,1 +1,18 @@
 // component css goes here
+/*Compatibilidad para navegadores*/
+
+::-webkit-input-placeholder {
+    text-align: center;
+  }
+  
+  :-moz-placeholder { /* Firefox 18- */
+    text-align: center;  
+  }
+  
+  ::-moz-placeholder {  /* Firefox 19+ */
+    text-align: center;  
+  }
+  
+  :-ms-input-placeholder {  
+    text-align: center; 
+  }
