--- a/src/app/medicamentos-alergia/medicamentos-alergia.component.html
+++ b/src/app/medicamentos-alergia/medicamentos-alergia.component.html
@@ -51,21 +51,25 @@
 
   <h5>Medicamentos a los que tiene alergia</h5>
   <form #FormAlergia="ngForm">
-  
+
     <div class="form-group">
 
-     <!--
+      <!--
       <select name="seleccionado" [(ngModel)]="codigoDrogaSeleccionado" required>
       <option value="" selected>Seleccione una droga</option>
     <option value={{d.codigo}} *ngFor="let d of drogas">{{d.descripcion}}
     </option>
     </select>
   -->
+      <input class="campoLargo" max-num-list=5 name="seleccionado" auto-complete [(ngModel)]="objetoDrogaSeleccionado"
+        [source]="drogas" placeholder="Seleccione una de las drogas" [list-formatter]="autocompleListFormatter" value-property-name="codigo"
+        display-property-name="descripcion" required/>
+
     </div>
     <div class="form-group">
-        <label>Ingrese una descripción o motivo relacionados con la alergia a la droga:</label>
-        <input class="campoLargo" name="descripcion" type="text" [(ngModel)]="descripcion" required>
-      </div>
+      <label>Ingrese una descripción o motivo relacionados con la alergia a la droga:</label>
+      <input class="campoLargo" name="descripcion" type="text" [(ngModel)]="descripcion" required>
+    </div>
 
     <button [disabled]="!FormAlergia.form.valid" (click)="guardar()">Guardar</button>
     <button (click)="drogaModal.close()">Cerrar</button>
