--- a/src/app/siniestros-accidentes/siniestros-accidentes.component.scss
+++ b/src/app/siniestros-accidentes/siniestros-accidentes.component.scss
@@ -35,3 +35,20 @@ label{
 input {
     width: 50px;
 }
+/*Compatibilidad para navegadores*/
+
+::-webkit-input-placeholder {
+    text-align: center;
+  }
+  
+  :-moz-placeholder { /* Firefox 18- */
+    text-align: center;  
+  }
+  
+  ::-moz-placeholder {  /* Firefox 19+ */
+    text-align: center;  
+  }
+  
+  :-ms-input-placeholder {  
+    text-align: center; 
+  }
